# certificate-management

./: .dockerignore  .env.example  .env.test.example  .gitignore  Dockerfile  PRD.md  README.md  artigo.tex  docker-compose.yaml  eslint.config.mjs  gcp-emulator-init.py  liquid-test.ts  loki-config.yaml  migrate-gcp-files.ts  migrate-templates-to-bucket.ts  next.config.ts  otel-collector-config.yaml  package-lock.json  package.json  playwright.config.ts  prisma.config.ts  pyproject.toml  setup-pubsub.sh  stryker.config.json  vitest.config.integration.ts  vitest.config.unit.ts
.claude/: CLAUDE.md
.claude/rules/: cicd.md  ddd.md  frontend-structure.md  route-handlers.md  server-actions.md  terraform.md
.github/workflows/: deploy.yml
cloud-functions/generate-pdfs/: .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.yaml  liquid_types.py  main.py  requirements.txt
cloud-functions/send-certificate-emails/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
docs/: cicd.md  ddd.md  frontend-structure.md  route-handlers.md  server-actions.md  terraform.md  tests.md
src/: env.ts  global.d.ts  instrumentation.ts  middleware.ts  proxy.ts  types.ts
src/api-calls/: add-template-by-url.ts  fetch-certificate-emission.ts  fetch-certificate-emissions-metrics-by-user.ts  fetch-certificate-emissions.ts  fetch-me.ts  fetch-template-by-id.ts  fetch-templates.ts  fetch-user-by-session-token.ts  (+1 more)
terraform/: api.tf  artifact-registry.tf  bucket.tf  cloud-function.tf  cloud-run.tf  cloud-scheduler.tf  cloud-tasks.tf  iam.tf  main.tf  variables.tf
(+885 files in other folders)
